--- a/app/src/main/res/drawable-anydpi/button_cancel.xml
+++ b/app/src/main/res/drawable-anydpi/button_cancel.xml
@@ -3,22 +3,22 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="10dip" />
-            <stroke android:width="1dip" android:color="@color/red" />
-            <solid android:color="@color/red"/>
+            <stroke android:width="1dip" android:color="@color/green" />
+            <solid android:color="@color/green"/>
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="10dip" />
-            <stroke android:width="1dip" android:color="@color/red" />
-            <solid android:color="@color/red"/>
+            <stroke android:width="1dip" android:color="@color/green" />
+            <solid android:color="@color/green"/>
         </shape>
     </item>
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="10dip" />
-            <stroke android:width="1dip" android:color="@color/red" />
-            <solid android:color="@color/red"/>
+            <stroke android:width="1dip" android:color="@color/green" />
+            <solid android:color="@color/green"/>
         </shape>
     </item>
 </selector>
